# yt-dlp-downloader

./: .gitignore  README.md  README_zh-CN.md  download_imp.py  package.oo.yaml  pyproject.toml  requirements.txt
.github/workflows/: export-layer.yml
flows/batch-media-download/: .flow.ui.oo.json  flow.oo.yaml
flows/example/: .flow.ui.oo.json  flow.oo.yaml
flows/media-download/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
slotflows/+slotflow#1/: .slotflow.ui.oo.json  slotflow.oo.yaml
subflows/batch-media-download/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/downloader/: __init__.py  download_imp.py  task.oo.yaml
